--- a/views/signin.html
+++ b/views/signin.html
@@ -7,17 +7,38 @@
 
     <!-- Bootstrap CSS -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="./dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../dist/css/bootstrap.min.css">
+    <style>
+        .bd-placeholder-img {
+          font-size: 1.125rem;
+          text-anchor: middle;
+        }
+  
+        @media (min-width: 768px) {
+          .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+          }
+        }
+      </style>
+    <link rel="stylesheet" href="../dist/css/signin.css">
 
     <title>研究倫理委員會申請暨審查系統</title>
   </head>
-  <body>
-    <h1>研究倫理委員會申請暨審查系統</h1>
-
+  <body class="text-center">
+    <form class="form-signin">
+        <img class="mb-4" src="../assets/images/logo/logoCircleWhite.png" alt="" width="72" height="72">
+        <h1 class="h3 mb-3 font-weight-normal">趕緊登入吧!</h1>
+        <label for="inputEmail" class="sr-only">帳號</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="帳號" required autofocus>
+        <label for="inputPassword" class="sr-only">密碼</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="密碼" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">登入</button>
+        <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
+    </form>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="./dist/js/jquery-3.3.1.min.js"></script>
-    <script src="./dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../dist/js/jquery-3.3.1.min.js"></script>
+    <script src="../dist/js/bootstrap.bundle.min.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script> -->
