--- a/views/signin.html
+++ b/views/signin.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="../dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../dist/css/signin.css">
     <style>
         .bd-placeholder-img {
           font-size: 1.125rem;
@@ -19,22 +20,166 @@
             font-size: 3.5rem;
           }
         }
-      </style>
-    <link rel="stylesheet" href="../dist/css/signin.css">
+        /* bakcground effect */
+        .context {
+            width: 100%;
+            position: absolute;
+            top:30vh;
+            
+        }
+        .area{
+            background: #E69691;  
+            background: -webkit-linear-gradient(to left, #FF6655, #E69691);  
+            width: 100%;
+            height:100vh;
+        }
 
+        .circles{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .circles li{
+            position: absolute;
+            display: block;
+            list-style: none;
+            width: 20px;
+            height: 20px;
+            background: rgba(255, 255, 255, 0.5);
+            animation: animate 25s linear infinite;
+            bottom: -150px;
+            
+        }
+
+        .circles li:nth-child(1){
+            left: 25%;
+            width: 80px;
+            height: 80px;
+            animation-delay: 0s;
+        }
+
+
+        .circles li:nth-child(2){
+            left: 10%;
+            width: 20px;
+            height: 20px;
+            animation-delay: 2s;
+            animation-duration: 12s;
+        }
+
+        .circles li:nth-child(3){
+            left: 70%;
+            width: 20px;
+            height: 20px;
+            animation-delay: 4s;
+        }
+
+        .circles li:nth-child(4){
+            left: 40%;
+            width: 60px;
+            height: 60px;
+            animation-delay: 0s;
+            animation-duration: 18s;
+        }
+
+        .circles li:nth-child(5){
+            left: 65%;
+            width: 20px;
+            height: 20px;
+            animation-delay: 0s;
+        }
+
+        .circles li:nth-child(6){
+            left: 75%;
+            width: 110px;
+            height: 110px;
+            animation-delay: 3s;
+        }
+
+        .circles li:nth-child(7){
+            left: 35%;
+            width: 150px;
+            height: 150px;
+            animation-delay: 7s;
+        }
+
+        .circles li:nth-child(8){
+            left: 50%;
+            width: 25px;
+            height: 25px;
+            animation-delay: 15s;
+            animation-duration: 45s;
+        }
+
+        .circles li:nth-child(9){
+            left: 20%;
+            width: 15px;
+            height: 15px;
+            animation-delay: 2s;
+            animation-duration: 35s;
+        }
+
+        .circles li:nth-child(10){
+            left: 85%;
+            width: 150px;
+            height: 150px;
+            animation-delay: 0s;
+            animation-duration: 11s;
+        }
+        @keyframes animate {
+
+            0%{
+                transform: translateY(0) rotate(0deg);
+                opacity: 1;
+                border-radius: 0;
+            }
+
+            100%{
+                transform: translateY(-1000px) rotate(720deg);
+                opacity: 0;
+                border-radius: 50%;
+            }
+
+        }
+        /* background effect end */
+    </style>
     <title>研究倫理委員會申請暨審查系統</title>
   </head>
-  <body class="text-center">
-    <form class="form-signin">
-        <img class="mb-4" src="../assets/images/logo/logoCircleWhite.png" alt="" width="72" height="72">
-        <h1 class="h3 mb-3 font-weight-normal">趕緊登入吧!</h1>
-        <label for="inputEmail" class="sr-only">帳號</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="帳號" required autofocus>
-        <label for="inputPassword" class="sr-only">密碼</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="密碼" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">登入</button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
-    </form>
+  <body>
+    <!-- bg effect component -->
+    <div class="area" >
+        <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+    <!-- bg effect component end-->
+    <div class="context">
+        <div class="text-center">
+            <form class="form-signin">
+                <img class="mb-4" src="../assets/images/logo/logoCircleWhite.png" alt="" width="72" height="72">
+                <h1 class="h5 mb-3 font-weight-normal text-white">研究倫理委員會申請暨審查系統</h1>
+                <label for="inputEmail" class="sr-only">帳號</label>
+                <input type="email" id="inputEmail" class="form-control" placeholder="帳號" required autofocus>
+                <label for="inputPassword" class="sr-only">密碼</label>
+                <input type="password" id="inputPassword" class="form-control" placeholder="密碼" required>
+                <button class="btn btn-lg btn-info btn-block" type="submit">登入</button>
+                <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
+            </form>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="../dist/js/jquery-3.3.1.min.js"></script>
