adjust signin page style

--- a/views/signin.html
+++ b/views/signin.html
@@ -168,15 +168,21 @@
     <!-- bg effect component end-->
     <div class="context">
         <div class="text-center">
+            <h1 class="h1 mb-3 font-weight-bold text-white">研究倫理委員會申請暨審查系統</h1>
             <form class="form-signin">
-                <img class="mb-4" src="../assets/images/logo/logoCircleWhite.png" alt="" width="72" height="72">
-                <h1 class="h5 mb-3 font-weight-normal text-white">研究倫理委員會申請暨審查系統</h1>
-                <label for="inputEmail" class="sr-only">帳號</label>
-                <input type="email" id="inputEmail" class="form-control" placeholder="帳號" required autofocus>
-                <label for="inputPassword" class="sr-only">密碼</label>
-                <input type="password" id="inputPassword" class="form-control" placeholder="密碼" required>
-                <button class="btn btn-lg btn-info btn-block" type="submit">登入</button>
-                <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
+                <div class="row">
+                    <div class="col-sm">
+                        <img class="mb-4" src="../assets/images/logo/logoCircleWhite.png" alt="" width="240" height="240">
+                    </div>
+                    <div class="col-sm">
+                        <label for="inputEmail" class="sr-only">帳號</label>
+                        <input type="email" id="inputEmail" class="form-control" placeholder="帳號" required autofocus>
+                        <label for="inputPassword" class="sr-only">密碼</label>
+                        <input type="password" id="inputPassword" class="form-control" placeholder="密碼" required>
+                        <button class="btn btn-lg btn-outline-dark btn-block" type="submit">登入</button>
+                    </div>
+                </div>
+                <p class="mt-5 mb-3 text-muted">&copy; 2019 國立臺灣大學醫學院附設醫院</p>
             </form>
         </div>
     </div>
