--- a/views/signin.html
+++ b/views/signin.html
@@ -176,10 +176,10 @@
                     </div>
                     <div class="col-sm">
                         <label for="inputEmail" class="sr-only">帳號</label>
-                        <input type="email" id="inputEmail" class="form-control" placeholder="帳號" required autofocus>
+                        <input type="email" id="inputEmail" class="form-control" placeholder="帳號" autofocus>
                         <label for="inputPassword" class="sr-only">密碼</label>
-                        <input type="password" id="inputPassword" class="form-control" placeholder="密碼" required>
-                        <a href="../index.html"><button class="btn btn-lg btn-outline-dark btn-block" type="submit">登入</button></a>
+                        <input type="password" id="inputPassword" class="form-control" placeholder="密碼">
+                        <a class="btn btn-lg btn-outline-dark btn-block" href="../index.html">登入</a>
                     </div>
                 </div>
                 <p class="mt-5 mb-3 text-muted">&copy; 2019 國立臺灣大學醫學院附設醫院</p>
