--- a/views/signin.html
+++ b/views/signin.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="../dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../dist/css/signin.css">
     <style>
+        body{
+            font-family: Arial, "文泉驛正黑", "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "微軟正黑體", "Microsoft JhengHei", "標楷體", DFKai-SB, sans-serif;
+        }
         .bd-placeholder-img {
           font-size: 1.125rem;
           text-anchor: middle;
